--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>RocketCoffe | Cardápio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Serif:opsz,wght@8..144,700&display=swap" 
     rel="stylesheet">
-    <link rel="shortcut icon" href="./images/coffee-cup-icon.svg">
+    <link rel="icon" href="./images/coffee-cup-icon.svg">
 </head>
 <body>
     <header>
